--- a/GetTargetFrameworkVersion/GetTargetFrameworkVersion.csproj
+++ b/GetTargetFrameworkVersion/GetTargetFrameworkVersion.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="..\GetTargetFrameworkVersionForFW\Program.cs" Link="Program.cs" />
+  </ItemGroup>
+
 </Project>
